--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -3,7 +3,7 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Nav&Map Laboratory (李泽宇课题组)# Website name
+title: Nav&Map Laboratory (李泽宇课题组)
 baseURL: 'https://www.smartsurvey.club/' # Website URL
 
 ############################
