--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,7 +4,7 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Tour
+  - name: 简介
     url: tour
     weight: 10
   - name: News
@@ -13,7 +13,7 @@ main:
   - name: People
     url: people
     weight: 30
-  - name: Events
+  - name: 活动
     url: event
     weight: 40
   - name: Publications
